# pandas-openlineage

./: .gitignore  README.md  openlineage.yml  pyproject.toml
examples/: expected_events.json  s3_example.py
pandas_openlineage/: __init__.py  listener.py  utils.py
pandas_openlineage/decorators/: lineage.py
